# XLinkAndroidTest

./: .gitignore  .gitmodules  README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/xlink_android_test/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/example/xlink_android_test/: MainActivity.java
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/xlink_android_test/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
